test/functions/iterators/diten/typeIterator.good
typeIterator.chpl:2: error: iterators can not yield types
